kubernetes/accounts-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-service
  labels:
    app: accounts-service
spec:
  selector:
    app: accounts-service
  ports:
  - port: 4000
    targetPort: http
    name: http
  - port: 9090
    targetPort: metrics
    name: metrics
  type: ClusterIP
